# sample-mlops-bestpractices

./: .gitignore  README.md
sagemaker-automated-drift-and-trend-monitoring/: .env.example  README.md  main.py  pyproject.toml  requirements_lambda.txt
sagemaker-automated-drift-and-trend-monitoring/data/: README.md  generate_datasets.py
sagemaker-automated-drift-and-trend-monitoring/docs/: VERSION_MANAGEMENT.md  generate_architecture_diagram.py  generate_inference_monitoring_diagram.py  generate_mlflow_evidently_diagram.py  inference_monitoring_processflow.excalidraw
sagemaker-automated-drift-and-trend-monitoring/docs/guides/: architecture_diagram.excalidraw
sagemaker-automated-drift-and-trend-monitoring/docs/screenshots/: README.md
sagemaker-automated-drift-and-trend-monitoring/notebooks/: 1_training_pipeline.ipynb  2b_inference_monitoring_WIP.ipynb  3_governance_dashboard.ipynb  4_optional_version_validation.ipynb
sagemaker-automated-drift-and-trend-monitoring/scripts/: README.md  delete_infrastructure.sh  deploy_lambda_container.sh  simulate_variable_drift.sh
sagemaker-automated-drift-and-trend-monitoring/src/config/: __init__.py  config.py  config.yaml  drift_monitoring_config.json
sagemaker-automated-drift-and-trend-monitoring/src/drift_monitoring/: Dockerfile.lambda  create_cloudwatch_monitoring.py  create_monitoring_table.py  deploy_monitoring_writer.py  evidently_reports.py  generate_drift_dataset.py  generate_ground_truth_confirmations.py  lambda_drift_monitor.py  (+7 more)
sagemaker-automated-drift-and-trend-monitoring/tests/: test_version_validation.py
(+46 files in other folders)
