[project]
name = "sagemaker-automated-drift-and-trend-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.17.0",
    "boto3>=1.34.0",
    "sagemaker>=2.210.0,<3.0.0",  # Use v2.x for compatibility with XGBoostModel
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "awswrangler>=3.5.0",      # AWS Data Wrangler for Athena/S3
    "pyathena>=3.0.0",         # Athena SQL client
    "pyarrow>=14.0.0",         # Parquet support for Iceberg
    "plotly>=5.18.0",          # Interactive visualizations
    "evidently>=0.4.22",       # ML monitoring with data drift detection
    "sagemaker-mlflow>=0.1.0", # SageMaker MLflow plugin (registers arn: URI scheme)
    "statsmodels>=0.14.0",     # Required by Evidently for statistical tests
    "ipykernel>=6.29.0",       # Jupyter kernel for notebook execution
]
